# TemplateCppFlat

./: CMakeLists.txt  CMakePresets.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
src/: main.cpp
test/: CMakeLists.txt
test/source/: bidirect-tree_test.cpp
